--- a/desafios/d009/style.css
+++ b/desafios/d009/style.css
@@ -1,38 +1,71 @@
 @charset "UTF-8";
 
-
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
 *{
-    margin: 0%;
-    
+   margin: 0%;
 }
+
+
+
+
 
 :root{
     --color00: #7CCBEB;
-    --color01: #2EA7F2;
+    --color01: #2681b9;
     --color02: #2932D9;
-    --color03: #C4CDFB;
+    --color03: #9babfa;
     --color04: #DD3E57;
 }
 
 body{
-    background-color: var(--color02);
-}
-
-aside{
-    background-color: var(--color03);
-    width: 800px;
-    margin: auto;
+    background-color: var(--color01);
 }
 
 header{
-    background-color: var(--color04);
+    font-family: 'Oswald', Arial, Helvetica, sans-serif;
+    background-color: var(--color02);
     text-align: center;
     padding: 20px;
 }
 
-a{
-    display: block;
-    width: 400px;
+article{
     margin: auto;
+    width: 400px;
+    padding: 40px 4px 40px 6px;
+}
+
+article > ul{
+    text-align: center;
+}
+
+p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    background-color: var(--color04);
+    text-indent: 15px;
+    padding: 2px;
+    border-radius: 8px;
+    text-align: justify;
+    width: 400px;
+}
+
+p > em{
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
+strong{
+    color: var(--color03);
+}
+
+strong > a{
+    color: var(--color03);
+}
+
+strong > a:hover{
+    background-color: var(--color01);
+    border-radius: 5px;
+    color: black;
+    text-decoration: none;
 }
