--- a/desafios/d011/style/style.css
+++ b/desafios/d011/style/style.css
@@ -6,10 +6,11 @@ body{
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
 }
 
-section{
-    /*background-image: url('../imagem/astronauta.png');*/
-    background-color: aquamarine;
+main{
+    height: 97vh;
+    background-image: url('../imagem/astronauta.png');
+    background-position: center center;
+    background-repeat: no-repeat;
 }
