--- a/desafios/d009/style.css
+++ b/desafios/d009/style.css
@@ -24,30 +24,36 @@ body{
 
 header{
     font-family: 'Oswald', Arial, Helvetica, sans-serif;
+    font-variant: small-caps;
+    font-size: 3vw;
     background-color: var(--color02);
     text-align: center;
     padding: 20px;
 }
 
 article{
-    margin: auto;
-    width: 400px;
-    padding: 40px 4px 40px 6px;
+    padding: 20px;
 }
 
-article > ul{
-    text-align: center;
+aside{
+    display: flex;  
+    align-items: center;
 }
 
-p{
+img{
+    width: 30vh;
+}
+
+div{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
+    font-size: 2vh;
     background-color: var(--color04);
     text-indent: 15px;
     padding: 2px;
     border-radius: 8px;
-    text-align: justify;
-    width: 400px;
+    text-align: left;
+    width: 50vw;
 }
 
 p > em{
