--- a/desafios/d009/style.css
+++ b/desafios/d009/style.css
@@ -1,7 +1,5 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
-
 *{
    margin: 0%;
 }
@@ -12,10 +10,10 @@
 
 :root{
     --color00: #7CCBEB;
-    --color01: #2681b9;
+    --color01: #2782bb;
     --color02: #2932D9;
     --color03: #9babfa;
-    --color04: #DD3E57;
+    --color04: #5c04ff3f;
 }
 
 body{
@@ -23,10 +21,11 @@ body{
 }
 
 header{
-    font-family: 'Oswald', Arial, Helvetica, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-variant: small-caps;
-    font-size: 3vw;
+    font-size: 2vw;
     background-color: var(--color02);
+    color: var(--color03);
     text-align: center;
     padding: 20px;
 }
@@ -36,23 +35,28 @@ article{
 }
 
 aside{
+    max-width: 600px;
     display: flex;  
     align-items: center;
 }
 
 img{
-    width: 30vh;
+    width: 25vw;
 }
 
 div{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     font-size: 2vh;
     background-color: var(--color04);
     text-indent: 15px;
     padding: 2px;
     border-radius: 8px;
-    text-align: left;
+    text-align: justify;
+    width: 400px;
+}
+
+p{
     width: 50vw;
 }
 
