--- a/desafios/d005/style.css
+++ b/desafios/d005/style.css
@@ -29,7 +29,7 @@ main{
     background-color: var(--color04);
     border-radius: 10px 10px 10px 10px;
     margin: auto;
-    width: 70%;
+    width: 95%;
 }
 
 article{
@@ -55,14 +55,24 @@ div{
     padding-left: 8px;
 }
 
+div > h2{
+    text-align: center;
+}
+
 p{
     font-weight: bold;
     text-indent: 12px;
 }
 
+ul{
+    list-style: none;
+    padding: 2px;
+}
+
 li{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
+    margin-bottom: 20px;
     padding: 6px;
 }
 
