--- a/exercicios/ex026/mq002/style/style.css
+++ b/exercicios/ex026/mq002/style/style.css
@@ -12,10 +12,37 @@ html, body{
     width: 100vw;
     height: 100vh;
     background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 h1{
     color: #fafad2;
     text-shadow: 4px 4px 2px #6494ed88;
     padding: 10px;
+}
+
+/* 
+
+   Aparelho em Modo Retrato (portrait) 
+   Aparelho em Modo Paisagem (landscape)
+
+*/
+
+@media screen and (orientation: portrait) {
+
+    body{
+        background: url("../imagem/cev-portrait.jpg") center bottom no-repeat;
+        background-size: contain;
+    }
+
+}
+
+@media screen and (orientation: landscape) {
+
+    body{
+        background: url("../imagem/cev-landscape.jpg") left bottom no-repeat;
+        background-size: contain;
+    }
+
 }
