--- a/exercicios/ex026/mq005/style/style.css
+++ b/exercicios/ex026/mq005/style/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-/* VErsão Mobile First */
+/* Versão Mobile First */
 
 *{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
